# django-mpkmwna8

./: .gitignore  README.md  VIEWMASTER_REIMPLEMENTATION_PLAN.md  build.sh  main.py  manage.py  pyproject.toml  render.yaml  requirements.txt  run.sh
viewmaster/: manage.py
viewmaster/homepage/: admin.py  api.py  catalog.py  models.py  slideshow_sources.py  tests.py  urls.py  views.py
viewmaster/homepage/data/: least_similar.json  most_similar.json  top_neighbors.json  videos.txt
viewmaster/homepage/management/commands/: build_top_neighbors.py  check_slideshow_storage.py  import_catalog.py
viewmaster/homepage/migrations/: 0001_initial.py
viewmaster/homepage/static/homepage/: viewer.css  viewer.js
viewmaster/homepage/templates/homepage/: login.html  slideshow.html
viewmaster/viewmaster/: asgi.py  settings.py  urls.py  wsgi.py
